--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
         <div class="nav__login">
             <div class="nav__user">
-                <a href="#"><i class='bx bx-user' id="icons"></i></a>
+                <a href="/formulario.html" target="_blank"><i class='bx bx-user' id="icons"></i></a>
             </div>
             <div class="nav__cart">
                 <a href="#"><i class='bx bxs-cart' id="icons"></i></a>
@@ -99,7 +99,7 @@
         <div class="content">
             <div class="box">
                 <div class="imgBx">
-                    <img src="/img/caroussel/first-img.png" alt="">
+                    <img src="/img/loja/first-img.png" alt="">
                 </div>
                 <div class="text">
                     <a href="#" class="btn">Comprar agora</a>
@@ -108,7 +108,7 @@
 
             <div class="box">
                 <div class="imgBx">
-                    <img src="/img/caroussel/second-img.png" alt="">
+                    <img src="/img/loja/second-img.png" alt="">
                 </div>
                 <div class="text">
                     <a href="#" class="btn">Comprar agora</a>
@@ -117,7 +117,7 @@
 
             <div class="box">
                 <div class="imgBx">
-                    <img src="/img/caroussel/third-img.png" alt="">
+                    <img src="/img/loja/third-img.png" alt="">
                 </div>
                 <div class="text">
                     <a href="#" class="btn">Comprar agora</a>
