--- a/index.html
+++ b/index.html
@@ -10,8 +10,6 @@
     <meta name="author" content="Ana Lima">
     <!-- Link BoxIcons -->
     <link href='https://unpkg.com/boxicons@2.0.9/css/boxicons.min.css' rel='stylesheet'>
-    <!-- Link Swiper's CSS -->
-    <link rel="stylesheet" href="assets/css/swiper-bundle.css" />
     <!-- Link CSS Style -->
     <link rel="stylesheet" href="/css/styles.css">
 </head>
@@ -32,7 +30,7 @@
                 <a href="/formulario.html" target="_blank"><i class='bx bx-user' id="icons"></i></a>
             </div>
             <div class="nav__cart">
-                <a href="#"><i class='bx bxs-cart' id="icons"></i></a>
+                <a href="/carrinho.html" target="_blank"><i class='bx bxs-cart' id="icons"></i></a>
             </div>
         </div>
     </header>
@@ -63,9 +61,6 @@
                     doloremque quis sapiente illo iure ex ullam aut. Architecto recusandae ducimus eum natus officia
                     assumenda dolorum atque quos ad.
                 </p>
-                <!-- <div class="circulo-img">
-                    <img src="/img/segunda-imagem.png" alt="">
-                </div> -->
             </div>
         </div>
     </section>
@@ -99,7 +94,7 @@
         <div class="content">
             <div class="box">
                 <div class="imgBx">
-                    <img src="/img/loja/first-img.png" alt="">
+                    <img src="/img/loja/first-img.png" alt="Item 1">
                 </div>
                 <div class="text">
                     <a href="#" class="btn">Comprar agora</a>
@@ -108,7 +103,7 @@
 
             <div class="box">
                 <div class="imgBx">
-                    <img src="/img/loja/second-img.png" alt="">
+                    <img src="/img/loja/second-img.png" alt="Item 2">
                 </div>
                 <div class="text">
                     <a href="#" class="btn">Comprar agora</a>
@@ -117,7 +112,7 @@
 
             <div class="box">
                 <div class="imgBx">
-                    <img src="/img/loja/third-img.png" alt="">
+                    <img src="/img/loja/third-img.png" alt="Item 3">
                 </div>
                 <div class="text">
                     <a href="#" class="btn">Comprar agora</a>
@@ -210,9 +205,6 @@
             </div>
         </div>
     </section>
-
-
-
 </body>
 
 <script src="/js/main.js" defer></script>
