--- a/formulario.html
+++ b/formulario.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 
 <head>
     <meta charset="UTF-8" />
@@ -16,8 +16,7 @@
                 <div class="row">
                     <div class="col-md-6 col-sm-12">
                         <div class="form-login">
-                            <span class="desc-form">Eu tenho uma conta</span>
-                            <h2 class="title-form">Log In&#33;</h2>
+                            <h2 class="title-form">Eu tenho uma conta</h2>
                             <form class="login" action="" method="POST">
                                 <div class="input-container">
                                     <input type="email" name="email" id="emai" autocomplete="off" placeholder="Email"
@@ -36,43 +35,13 @@
                                 <div class="footer-form">
                                     <div class="pull-left">
                                         <input id="remember" type="checkbox" name="" />
-                                        <label for="remember">Me lembre</label>
+                                        <a class="pull-right" href="/cadastro.html">Não tenho cadastro</a>
                                     </div>
-                                    <a class="pull-right" href="#">Esqueceu a senha?&#63;</a>
+                                    <a class="pull-right" href="#">Esqueci a senha</a>
                                 </div>
                             </form>
                         </div>
                     </div>
-
-                    <div class="col-md-6 col-sm-12">
-                        <div class="form-signup">
-                            <span class="desc-form">Não tenho uma conta</span>
-                            <h2 class="title-form">Sign up&#33;</h2>
-                            <form class="signup" action="" method="POST">
-
-                                <div class="input-container">
-                                    <input type="text" name="fullname" id="fullname" autocomplete="off"
-                                        placeholder="Full Name" required="required" />
-                                    <label for="fullname">Nome completo</label>
-                                </div>
-
-                                <div class="input-container">
-                                    <input type="email" name="email2" id="emai2" placeholder="Email" />
-                                    <label for="emai2">Email</label>
-                                </div>
-
-                                <div class="input-container">
-                                    <input type="password2" name="new-password" id="pass2" autocomplete="new-password"
-                                        placeholder="Password" required="required" />
-                                    <label for="pass2">Senha</label>
-                                </div>
-
-                                <input class="btn btn-block" name="signup" type="submit" value="Sign up" />
-                            </form>
-                        </div>
-                    </div>
-
-
                 </div>
             </div>
         </div>
