Página shopping cart

--- a/carrinho.html
+++ b/carrinho.html
@@ -1,54 +1,338 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en">
 
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Formulário</title>
-    <link href='https://unpkg.com/boxicons@2.0.9/css/boxicons.min.css' rel='stylesheet'>
-    <link rel="stylesheet" href="/css/carrinho.css" />
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/css/carrinho.css">
 </head>
 
 <body>
-    <div class="container">
-        <div class="shopping-cart">
-            <div class="shopping-cart-header">
-                <i class='bx bxs-cart'></i>
-                <div class="shopping-cart-total">
-                    <span class="lighter-text">Total:</span>
-                    <span class="main-color-text">R$000,00</span>
+    <main class="container">
+        <div class="item-flex">
+
+            <!--
+       - checkout
+      -->
+            <section class="checkout">
+
+                <h2 class="section-heading">Payment Details</h2>
+
+                <div class="payment-form">
+
+                    <div class="payment-method">
+
+                        <button class="method selected">
+                            <ion-icon name="card"></ion-icon>
+
+                            <span>Credit Card</span>
+
+                            <ion-icon class="checkmark fill" name="checkmark-circle"></ion-icon>
+                        </button>
+
+                        <button class="method">
+                            <ion-icon name="logo-paypal"></ion-icon>
+
+                            <span>PayPal</span>
+
+                            <ion-icon class="checkmark" name="checkmark-circle-outline"></ion-icon>
+                        </button>
+
+                    </div>
+
+                    <form action="#">
+
+                        <div class="cardholder-name">
+                            <label for="cardholder-name" class="label-default">Cardholder name</label>
+                            <input type="text" name="cardholder-name" id="cardholder-name" class="input-default">
+                        </div>
+
+                        <div class="card-number">
+                            <label for="card-number" class="label-default">Card number</label>
+                            <input type="number" name="card-number" id="card-number" class="input-default">
+                        </div>
+
+                        <div class="input-flex">
+
+                            <div class="expire-date">
+                                <label for="expire-date" class="label-default">Expiration date</label>
+
+                                <div class="input-flex">
+
+                                    <input type="number" name="day" id="expire-date" placeholder="31" min="1" max="31"
+                                        class="input-default">
+                                    /
+                                    <input type="number" name="month" id="expire-date" placeholder="12" min="1" max="12"
+                                        class="input-default">
+
+                                </div>
+                            </div>
+
+                            <div class="cvv">
+                                <label for="cvv" class="label-default">CVV</label>
+                                <input type="number" name="cvv" id="cvv" class="input-default">
+                            </div>
+
+                        </div>
+
+                    </form>
+
                 </div>
-            </div>
 
-            <ul class="shopping-cart-items">
-                <li class="clearfix">
-                    <img src="/img/loja/first-img.png" alt="Item 1">
-                    <span class="item-name">lorem</span>
-                    <span class="item-price">R$849.99</span>
-                    <span class="item-quantity">Quantity: 01</span>
-                </li>
+                <button class="btn btn-primary">
+                    <b>Pay</b> $ <span id="payAmount">1.500.00</span>
+                </button>
 
-                <li class="clearfix">
-                    <img src="/img/loja/second-img.png" alt="Item 2">
-                    <span class="item-name">lorem</span>
-                    <span class="item-price">R$1,249.99</span>
-                    <span class="item-quantity">Quantity: 01</span>
-                </li>
+            </section>
 
-                <li class="clearfix">
-                    <img src="/img/loja/third-img.png" alt="Item 3">
-                    <span class="item-name">lorem</span>
-                    <span class="item-price">R$129.99</span>
-                    <span class="item-quantity">Quantity: 01</span>
-                </li>
-            </ul>
-            <div class="div-botao">
-                <a href="#" class="button">Pagar</a>
-            </div>
+
+            <!--
+        - cart
+      -->
+            <section class="cart">
+
+                <div class="cart-item-box">
+
+                    <div class="product-card">
+
+                        <div class="card">
+
+                            <div class="img-box">
+                                <img src="/img/loja/first-img.png" alt="Poltrona" width="80px" class="product-img">
+                            </div>
+
+                            <div class="detail">
+
+                                <h4 class="product-name">Lorem</h4>
+
+                                <div class="wrapper">
+
+                                    <div class="product-qty">
+                                        <button id="decrement">
+                                            <ion-icon name="remove-outline"></ion-icon>
+                                        </button>
+
+                                        <span id="quantity">1</span>
+
+                                        <button id="increment">
+                                            <ion-icon name="add-outline"></ion-icon>
+                                        </button>
+                                    </div>
+
+                                    <div class="price">
+                                        $ <span id="price">500</span>
+                                    </div>
+
+                                </div>
+
+                            </div>
+
+                            <button class="product-close-btn">
+                                <ion-icon name="close-outline"></ion-icon>
+                            </button>
+
+                        </div>
+
+                    </div>
+
+                    <div class="product-card">
+
+                        <div class="card">
+
+                            <div class="img-box">
+                                <img src="/img/loja/third-img.png" alt="Vaso de planta" width="80px"
+                                    class="product-img">
+                            </div>
+
+                            <div class="detail">
+
+                                <h4 class="product-name">Lorem</h4>
+
+                                <div class="wrapper">
+
+                                    <div class="product-qty">
+                                        <button id="decrement">
+                                            <ion-icon name="remove-outline"></ion-icon>
+                                        </button>
+
+                                        <span id="quantity">1</span>
+
+                                        <button id="increment">
+                                            <ion-icon name="add-outline"></ion-icon>
+                                        </button>
+                                    </div>
+
+                                    <div class="price">
+                                        $ <span id="price">500</span>
+                                    </div>
+
+                                </div>
+
+                            </div>
+
+                            <button class="product-close-btn">
+                                <ion-icon name="close-outline"></ion-icon>
+                            </button>
+
+                        </div>
+
+                    </div>
+                    <!--  -->
+                    <div class="product-card">
+
+                        <div class="card">
+
+                            <div class="img-box">
+                                <img src="/img/loja/second-img.png" alt="Sofá" width="80px" class="product-img">
+                            </div>
+
+                            <div class="detail">
+
+                                <h4 class="product-name">Lorem</h4>
+
+                                <div class="wrapper">
+
+                                    <div class="product-qty">
+                                        <button id="decrement">
+                                            <ion-icon name="remove-outline"></ion-icon>
+                                        </button>
+
+                                        <span id="quantity">1</span>
+
+                                        <button id="increment">
+                                            <ion-icon name="add-outline"></ion-icon>
+                                        </button>
+                                    </div>
+
+                                    <div class="price">
+                                        $ <span id="price">500</span>
+                                    </div>
+
+                                </div>
+
+                            </div>
+
+                            <button class="product-close-btn">
+                                <ion-icon name="close-outline"></ion-icon>
+                            </button>
+
+                        </div>
+
+                    </div>
+
+
+                </div>
+
+                <div class="wrapper">
+
+                    <div class="discount-token">
+
+                        <label for="discount-token" class="label-default">Gift card/Discount code</label>
+
+                        <div class="wrapper-flex">
+
+                            <input type="text" name="discount-token" id="discount-token" class="input-default">
+
+                            <button class="btn btn-outline">Apply</button>
+
+                        </div>
+
+                    </div>
+
+                    <div class="amount">
+
+                        <div class="subtotal">
+                            <span>Subtotal</span> <span>$ <span id="subtotal">1.500</span></span>
+                        </div>
+
+                        <div class="tax">
+                            <span>Tax</span> <span>$ <span id="tax">0</span></span>
+                        </div>
+
+                        <div class="shipping">
+                            <span>Shipping</span> <span>$ <span id="shipping">0</span></span>
+                        </div>
+
+                        <div class="total">
+                            <span>Total</span> <span>$ <span id="total">1.500.00</span></span>
+                        </div>
+
+                    </div>
+
+                </div>
+
+            </section>
+
         </div>
-    </div>
-    <script src="main.js"></script>
+
+    </main>
+
+    <!-- SCRIPT -->
+
+    <script>
+        'use strict';
+        const payAmountBtn = document.querySelector('#payAmount');
+        const decrementBtn = document.querySelectorAll('#decrement');
+        const quantityElem = document.querySelectorAll('#quantity');
+        const incrementBtn = document.querySelectorAll('#increment');
+        const priceElem = document.querySelectorAll('#price');
+        const subtotalElem = document.querySelector('#subtotal');
+        const taxElem = document.querySelector('#tax');
+        const totalElem = document.querySelector('#total');
+
+        for (let i = 0; i < incrementBtn.length; i++) {
+
+            incrementBtn[i].addEventListener('click', function () {
+
+                let increment = Number(this.previousElementSibling.textContent);
+
+                increment++;
+
+                this.previousElementSibling.textContent = increment;
+
+                totalCalc();
+
+            });
+
+
+            decrementBtn[i].addEventListener('click', function () {
+
+                let decrement = Number(this.nextElementSibling.textContent);
+
+                decrement <= 1 ? 1 : decrement--;
+
+                this.nextElementSibling.textContent = decrement;
+
+                totalCalc();
+
+            });
+
+        }
+
+        const totalCalc = function () {
+            const tax = 0;
+            let subtotal = 0;
+            let totalTax = 0;
+            let total = 0;
+            for (let i = 0; i < quantityElem.length; i++) {
+
+                subtotal += Number(quantityElem[i].textContent) * Number(priceElem[i].textContent);
+
+            }
+            subtotalElem.textContent = subtotal.toFixed(2);
+            totalTax = subtotal * tax;
+            taxElem.textContent = totalTax.toFixed(2);
+            total = subtotal + totalTax;
+            totalElem.textContent = total.toFixed(2);
+            payAmountBtn.textContent = total.toFixed(2);
+
+        }
+    </script>
+
+    <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
+
 </body>
 
 </html>
