--- a/index.html
+++ b/index.html
@@ -205,6 +205,35 @@
             </div>
         </div>
     </section>
+
+    <footer>
+        <div class="content">
+            <div class="box">
+                <div class="imgBx">
+                    <a href="https://www.facebook.com/" target="_blank">
+                        <img src="/img/footer/facebook.png">
+                    </a>
+                </div>
+            </div>
+            <!--  -->
+            <div class="box">
+                <div class="imgBx">
+                    <a href="https://www.instagram.com/" target="_blank">
+                        <img src="/img/footer/instagram.png">
+                    </a>
+                </div>
+            </div>
+            <!--  -->
+            <div class="box">
+                <div class="imgBx">
+                    <a href="https://twitter.com/" target="_blank">
+                        <img src="/img/footer/twitter.png">
+                    </a>
+                </div>
+            </div>
+        </div>
+    </footer>
+
 </body>
 
 <script src="/js/main.js" defer></script>
