--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
 
         <div class="nav__login">
             <div class="nav__user">
-                <a href="/formulario.html" target="_blank"><i class='bx bx-user' id="icons"></i></a>
+                <a href="/formulario.html"><i class='bx bx-user' id="icons"></i></a>
             </div>
             <div class="nav__cart">
-                <a href="/carrinho.html" target="_blank"><i class='bx bxs-cart' id="icons"></i></a>
+                <a href="/carrinho.html"><i class='bx bxs-cart' id="icons"></i></a>
             </div>
         </div>
     </header>
